// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageAlert tone: error renders correctly 1`] = `
<div>
  <div
    class="css-4co8rc-boxStyles-PageAlert"
  >
    <div
      class="css-18vqq3k-boxStyles-PageAlert"
    >
      <svg
        aria-hidden="false"
        aria-label="Error"
        class="css-lq07bo-Icon"
        clip-rule="evenodd"
        fill-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.472 1h7.056c.19 0 .43-.001.665.055.204.05.399.13.578.24.206.126.375.296.509.43l.036.037 4.922 4.922.037.036c.134.134.304.303.43.51.11.178.19.373.24.577.056.236.055.475.055.665v7.056c0 .19.001.43-.055.665-.05.204-.13.399-.24.578a2.799 2.799 0 0 1-.43.509l-.037.036-4.922 4.922-.036.037a2.799 2.799 0 0 1-.51.43c-.178.11-.373.19-.577.24a2.795 2.795 0 0 1-.665.055H8.472c-.19 0-.43.001-.665-.055-.204-.05-.399-.13-.578-.24-.206-.126-.375-.296-.509-.43l-.036-.037-4.922-4.922-.036-.036c-.135-.134-.305-.303-.431-.51a1.999 1.999 0 0 1-.24-.577A2.795 2.795 0 0 1 1 15.528V8.472c0-.19-.001-.43.055-.665a2 2 0 0 1 .24-.578c.126-.206.296-.375.43-.509l.037-.036 4.922-4.922.036-.036c.134-.135.303-.305.51-.431a2 2 0 0 1 .577-.24C8.043 1 8.282 1 8.472 1Zm.235 6.293a1 1 0 1 0-1.414 1.414L10.586 12l-3.293 3.293a1 1 0 0 0 1.414 1.414L12 13.414l3.293 3.293a1 1 0 0 0 1.414-1.414L13.414 12l3.293-3.293a1 1 0 0 0-1.414-1.414L12 10.586 8.707 7.293Z"
          fill="currentColor"
          stroke="none"
        />
      </svg>
    </div>
    <div
      class="css-ic9f31-boxStyles-PageAlert"
    >
      <div
        class="css-g6k1ma-boxStyles"
      >
        <h2
          class="css-1at50fi-boxStyles-PageAlertTitle"
        >
          There is a problem
        </h2>
        <ul
          class="css-1qfj7jm-UnorderedList"
        >
          <li
            class="css-1sudq1l-boxStyles-ListItem"
          >
            <a
              class="css-july2n-TextLink"
              href="#"
            >
              Full name must not be empty
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageAlert tone: info renders correctly 1`] = `
<div>
  <div
    class="css-4eblwe-boxStyles-PageAlert"
  >
    <div
      class="css-10lvnwv-boxStyles-PageAlert"
    >
      <svg
        aria-hidden="false"
        aria-label="Information"
        class="css-lq07bo-Icon"
        clip-rule="evenodd"
        fill-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1C5.9 1 1 5.9 1 12s4.9 11 11 11 11-4.9 11-11S18.1 1 12 1Zm0 17a1 1 0 0 1-1-1v-6a1 1 0 1 1 2 0v6a1 1 0 0 1-1 1Zm0-10a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"
          fill="currentColor"
          stroke="none"
        />
      </svg>
    </div>
    <div
      class="css-ic9f31-boxStyles-PageAlert"
    >
      <div
        class="css-g6k1ma-boxStyles"
      >
        <h2
          class="css-1at50fi-boxStyles-PageAlertTitle"
        >
          Notice
        </h2>
        <p
          class="css-dbscsh-boxStyles"
        >
          All vacancies close on the advertised closing date unless otherwise specified.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageAlert tone: success renders correctly 1`] = `
<div>
  <div
    class="css-1fz8glh-boxStyles-PageAlert"
  >
    <div
      class="css-iwdduc-boxStyles-PageAlert"
    >
      <svg
        aria-hidden="false"
        aria-label="Success"
        class="css-lq07bo-Icon"
        clip-rule="evenodd"
        fill-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 23c6.075 0 11-4.925 11-11S18.075 1 12 1 1 5.925 1 12s4.925 11 11 11Zm5.707-13.293a1 1 0 0 0-1.414-1.414L10 14.586l-2.293-2.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
          fill="currentColor"
          stroke="none"
        />
      </svg>
    </div>
    <div
      class="css-ic9f31-boxStyles-PageAlert"
    >
      <div
        class="css-g6k1ma-boxStyles"
      >
        <h2
          class="css-1at50fi-boxStyles-PageAlertTitle"
        >
          Submission successful
        </h2>
        <p
          class="css-dbscsh-boxStyles"
        >
          Your application has been successfully submitted.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageAlert tone: warning renders correctly 1`] = `
<div>
  <div
    class="css-rl6354-boxStyles-PageAlert"
  >
    <div
      class="css-ddla0z-boxStyles-PageAlert"
    >
      <svg
        aria-hidden="false"
        aria-label="Warning"
        class="css-lq07bo-Icon"
        clip-rule="evenodd"
        fill-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m23.1 20.1-9.3-18C13.4 1.4 12.7 1 12 1s-1.4.4-1.8 1.1l-9.3 18c-.3.6-.3 1.4.1 2 .4.6 1 1 1.7 1h18.7c.7 0 1.31-.33 1.7-1 .36-.6.3-1.4 0-2ZM12 19c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1Zm1-5c0 .6-.4 1-1 1s-1-.4-1-1V9c0-.6.4-1 1-1s1 .4 1 1v5Z"
          fill="currentColor"
          stroke="none"
        />
      </svg>
    </div>
    <div
      class="css-ic9f31-boxStyles-PageAlert"
    >
      <div
        class="css-g6k1ma-boxStyles"
      >
        <h2
          class="css-1at50fi-boxStyles-PageAlertTitle"
        >
          Browser out of date
        </h2>
        <p
          class="css-dbscsh-boxStyles"
        >
          Your web browser is out of date.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageAlert with a close button renders correctly 1`] = `
<div>
  <div
    class="css-4eblwe-boxStyles-PageAlert"
  >
    <div
      class="css-10lvnwv-boxStyles-PageAlert"
    >
      <svg
        aria-hidden="false"
        aria-label="Information"
        class="css-lq07bo-Icon"
        clip-rule="evenodd"
        fill-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1C5.9 1 1 5.9 1 12s4.9 11 11 11 11-4.9 11-11S18.1 1 12 1Zm0 17a1 1 0 0 1-1-1v-6a1 1 0 1 1 2 0v6a1 1 0 0 1-1 1Zm0-10a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"
          fill="currentColor"
          stroke="none"
        />
      </svg>
    </div>
    <div
      class="css-ic9f31-boxStyles-PageAlert"
    >
      <div
        class="css-g6k1ma-boxStyles"
      >
        <h2
          class="css-16u1tz7-boxStyles-PageAlertTitle"
        >
          PageAlert with close button
        </h2>
        <p
          class="css-dbscsh-boxStyles"
        >
          This is a Page alert component.
        </p>
      </div>
      <button
        aria-label="Close"
        class="css-hze38i-BaseButton-PageAlertCloseButton"
        type="button"
      >
        <span>
          <span
            class="css-oobk4c-Button"
          >
            Close
          </span>
          <span
            aria-live="assertive"
          />
        </span>
        <svg
          aria-hidden="true"
          class="css-sbsftc-Button"
          clip-rule="evenodd"
          fill-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18M6 6l12 12"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
